--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/microservices": "^10.4.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/serve-static": "^4.0.2",
+    "@nestjs/throttler": "^6.1.0",
     "@nestjs/typeorm": "^10.0.2",
     "bcrypt": "^5.1.1",
     "cache-manager": "^5.7.6",
     "cache-manager-redis-store": "^3.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "helmet": "^7.1.0",
     "nestjs-i18n": "^10.4.5",
     "pg": "^8.12.0",
     "reflect-metadata": "^0.1.13",
